# phi

./: .drone.yml  .editorconfig  .gitignore  BUILD.bazel  Dockerfile  LICENSE  Makefile  README.md  Readme.md  WORKSPACE  build.sh  deps.bzl  go.mod  go.sum  main.go  requirements.txt  skaffold.yaml  sqlc.yaml  test.http
.github/workflows/: ci.yaml
RL-2048/: .gitignore  Makefile  go.mod  go.sum
RL-2048/2048/: main.go
RL-2048/proto/: env.proto  game.proto
cmd/: balances.go  balsheet.go  categorize.go  cmd.go  connect.go  create_account.go  income.go  ingest.go  journal.go  link.go  login.go  migrate.go  register.go  server.go  sync.go  train.go
cmd/create/: account.go  transaction.go
cmd/csv/: ingest.go  parse.go  review.go
cmd/ingest/: ingest.go
cmd/migrate/: auth.go  core.go  tinkgw.go
cmd/server/: auth.go  core.go  tinkgw.go
core/: main.go
core/internal/: util.go
fava/: .dockerignore  Dockerfile  LICENSE  Makefile  requirements.txt
fava/frontend/: package.json
fava/src/: main.py
fly/: auth.toml  tinkgw.toml
fly/oathkeeper/: config.yaml  fly.toml  rules.yaml
fly/tinkgw/: fly.toml
go/cmd/auth/: BUILD.bazel  main.go  migrate.go  server.go
go/cmd/phi/: BUILD.bazel  add_account.go  auth.go  banks.go  categorize.go  classify.go  config.go  keys.go  link.go  login.go  main.go  model.go  register.go  state.go  store.go  sync.go  tick.go
go/cmd/tinkgw/: BUILD.bazel  main.go  migrate.go  server.go
go/core/: main.go
go/internal/phi/beancount/: BUILD.bazel  amount.go  ledger.go  metadata.go  open.go  regexp.go
go/internal/phi/commands/: BUILD.bazel  ledger.go  link.go  sync.go
go/internal/phi/key/: BUILD.bazel  key.go
go/internal/phi/models/: BUILD.bazel  auth.go  classify.go  home.go  sync.go
go/internal/tinkgw/server/: BUILD.bazel  constants.go  handlers.go  middlewares.go  routes.go  server.go  types.go
go/ledger/: main.go
go/phi-cli/: model.go
go/pkg/: log.go
go/pkg/auth/pb/: BUILD.bazel  auth.pb.go  auth.proto  auth_grpc.pb.go  gen.go
go/pkg/auth/server/: BUILD.bazel  login.go  register.go  server.go  server_test.go
go/pkg/client/: BUILD.bazel  client.go  login.go  session.go  tink.go  types.go
go/pkg/client/rt/: BUILD.bazel  authorization.go
go/pkg/client/tink/: BUILD.bazel  accounts.go  authorize_grant_delegate.go  client.go  create_user.go  transactions.go
go/pkg/config/: BUILD.bazel  config.go
go/pkg/interceptor/: BUILD.bazel  auth.go  tx.go
go/pkg/ledger/: BUILD.bazel  ledger.go  metadata.go  open.go  posting.go  transaction.go
go/pkg/middleware/: BUILD.bazel  auth.go
go/pkg/parser/: BUILD.bazel  account.go  amount.go  date.go  ledger.go  metadata.go  open.go  parser.go  posting.go  stringer.go  transaction.go
go/pkg/services/auth/pb/: BUILD.bazel  auth.pb.go  auth.pb.gw.go  auth.proto  auth_grpc.pb.go  gen.go
go/pkg/services/auth/server/: BUILD.bazel  login.go  login_test.go  register.go  register_test.go  server.go  server_test.go
go/pkg/services/bookkeeper/db/: BUILD.bazel  db.go  gen.go  ledgers.sql.go  models.go  querier.go  sqlc.yaml
go/pkg/services/bookkeeper/db/query/: ledgers.sql
go/pkg/services/bookkeeper/db/schema/: 000001_create_ledgers_table.down.sql  000001_create_ledgers_table.up.sql
go/pkg/services/bookkeeper/server/: BUILD.bazel  load.go  save.go  server.go
go/pkg/services/tinkgw/server/: BUILD.bazel  callback.go  link.go  routes.go  server.go  token.go
go/pkg/services/tinkgw/tink/: BUILD.bazel  accounts.go  authorize_grant.go  client.go  oauth_token.go  provider_consents.go  providers.go  transactions.go
go/pkg/tinkgw/db/: BUILD.bazel  db.go  models.go  querier.go  sqlc.yaml  users.sql.go
go/pkg/tinkgw/db/query/: users.sql
go/pkg/tinkgw/db/schema/: 000001_create_users_table.up.sql
go/pkg/tinkgw/server/: BUILD.bazel  create_user.go  get_link.go  get_token.go  server.go
go/pkg/util/: BUILD.bazel  cli.go  test.go
go/proto/: .gitignore  api.proto  bean.proto  gw.pb.go  gw.proto  gw_grpc.pb.go  ledger.pb.go  ledger_grpc.pb.go  shared.pb.go  transaction.pb.go  transaction.proto  transaction_grpc.pb.go
go/tinkgw/: main.go
http/: test.http  tink.http
k8s/: configmap.yaml
k8s/base/: kustomization.yaml
k8s/core/: deployment.yaml  service.yaml
k8s/fava/: deployment.yaml  service.yaml
k8s/ledger/: deployment.yaml  service.yaml
k8s/local/: kustomization.yaml  secret_auth.env  secret_core.env  secret_tinkgw.env
k8s/tinkgw/: deployment.yaml  service.yaml
k8s/ui/: deployment.yaml  service.yaml
ledger/: main.go
migrations/: 000001_create_accounts_table.down.sql  000002_create_transactions_table.up.sql  000003_create_postings_table.down.sql  000003_create_postings_table.up.sql
oathkeeper/: Dockerfile  config.yaml  rules.yaml
pkg/: logger.go  middleware.go
pkg/auth/: claims.go  login.go  register.go  server.go  verify.go
pkg/config/: config.go
pkg/core/: accounts.go  accounts_test.go  server.go  server_test.go  transactions.go  transactions_test.go
pkg/db/: accounts.sql.go  amount.go  amount_test.go  amounts_test.go  db.go  models.go  postings.sql.go  querier.go  transactions.sql.go
pkg/fin/: account.go  accounts.go  amount.go  amount_test.go  amounts.go  amounts_test.go  doc.go  err.go  posting.go  postings.go  sum.go  transaction.go  transactions.go
pkg/interceptor/: auth.go  tx.go
pkg/nordigen/: client.go
pkg/pb/: account.pb.go  amount.pb.go  auth.pb.go  auth_grpc.pb.go  core.pb.go  core_grpc.pb.go  posting.pb.go  transaction.pb.go
pkg/server/: auth.go  core.go  core_test.go  server.go  server_test.go
pkg/tink/: authorize_grant_delegate.go  client.go  create_user.go  oauth_token.go  rt.go  transactions.go
pkg/tinkgw/: callback.go  link.go  routes.go  server.go  sync.go  tx.go
pkg/ui/: modal.go  modal_err.go  modal_quit.go  posting_form.go  postings.go  transaction_form.go  transactions.go  ui.go
proto/: .gitignore  account.proto  amount.proto  auth.proto  core.proto  gw.proto  ledger.proto  posting.proto  shared.proto  tinkgw.proto  transaction.proto
tinkgw/: main.go
ui/: Dockerfile  Readme.md  package.json  tsconfig.json
(+332 files in other folders)
