load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "container_push")
load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")

# gazelle:prefix github.com/clstb/phi
gazelle(name = "gazelle")

container_bundle(
    name = "bundle",
    images = {
        "ghcr.io/clstb/phi-auth:$(version)": "//go/cmd/auth:image",
        "ghcr.io/clstb/phi-tinkgw:$(version)": "//go/cmd/tinkgw:image",
    },
)

container_push(
    name = "push",
    bundle = ":bundle",
    format = "OCI",
)
