load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "auth_lib",
    srcs = [
        "main.go",
        "migrate.go",
        "server.go",
    ],
    importpath = "github.com/clstb/phi/go/cmd/auth",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/auth/db",
        "//go/pkg/auth/pb",
        "//go/pkg/auth/server",
        "//go/pkg/interceptor",
        "//go/pkg/util",
        "@com_github_golang_migrate_migrate_v4//source/file",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_jackc_pgx_v4//pgxpool",
        "@com_github_jackc_pgx_v4//stdlib",
        "@com_github_urfave_cli_v2//:cli",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":auth",
    visibility = ["//visibility:public"],
)
