load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "phi_lib",
    srcs = [
        "add_account.go",
        "auth.go",
        "banks.go",
        "classify.go",
        "config.go",
        "keys.go",
        "main.go",
        "model.go",
        "state.go",
        "tick.go",
    ],
    importpath = "github.com/clstb/phi/go/cmd/phi",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/auth/pb",
        "//go/pkg/config",
        "//go/pkg/interceptor",
        "//go/pkg/ledger",
        "//go/pkg/tink",
        "//go/pkg/tinkgw/pb",
        "@com_github_charmbracelet_bubbles//help",
        "@com_github_charmbracelet_bubbles//key",
        "@com_github_charmbracelet_bubbles//textinput",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_lithammer_fuzzysearch//fuzzy",
        "@com_github_shopspring_decimal//:decimal",
        "@com_github_urfave_cli_v2//:cli",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
    ],
)

go_binary(
    name = "phi",
    embed = [":phi_lib"],
    visibility = ["//visibility:public"],
)
