load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "phi_lib",
    srcs = [
        "main.go",
        "model.go",
    ],
    importpath = "github.com/clstb/phi/go/cmd/phi",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/phi/commands",
        "//go/internal/phi/models",
        "//go/internal/phi/state",
        "//go/pkg/client",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "phi",
    embed = [":phi_lib"],
    visibility = ["//visibility:public"],
)
