load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tinkgw_lib",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/clstb/phi/go/cmd/tinkgw",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/interceptor",
        "//go/pkg/services/tinkgw/pb",
        "//go/pkg/services/tinkgw/server",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap",
        "@com_github_soheilhy_cmux//:cmux",
        "@com_github_urfave_cli_v2//:cli",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "tinkgw",
    embed = [":tinkgw_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":tinkgw",
    visibility = ["//visibility:public"],
)

container_bundle(
    name = "release",
    images = {
        "index.docker.io/clstb/phi-tinkgw:$(tag)": ":image",
        "index.docker.io/clstb/phi-tinkgw:latest": ":image",
    },
    visibility = ["//visibility:public"],
)
