load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tinkgw_lib",
    srcs = ["main.go"],
    importpath = "github.com/clstb/phi/go/cmd/tinkgw",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/tinkgw/server",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "tinkgw",
    embed = [":tinkgw_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":tinkgw",
    visibility = ["//visibility:public"],
)
