load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/clstb/phi/go/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/services/tinkgw/pb",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
