load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "interceptor",
    srcs = [
        "auth.go",
        "tx.go",
    ],
    importpath = "github.com/clstb/phi/go/pkg/interceptor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_dgrijalva_jwt_go//:jwt-go",
        "@com_github_gofrs_uuid//:uuid",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//auth",
        "@com_github_jackc_pgx_v4//:pgx",
        "@com_github_jackc_pgx_v4//pgxpool",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)
