load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["auth.go"],
    importpath = "github.com/clstb/phi/go/pkg/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_lestrrat_go_jwx//jwk",
        "@com_github_lestrrat_go_jwx//jwt",
        "@com_github_ory_kratos_client_go//:kratos-client-go",
        "@org_uber_go_zap//:zap",
    ],
)
