load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "parser",
    srcs = [
        "account.go",
        "amount.go",
        "date.go",
        "ledger.go",
        "metadata.go",
        "open.go",
        "parser.go",
        "posting.go",
        "stringer.go",
        "transaction.go",
    ],
    importpath = "github.com/clstb/phi/go/pkg/parser",
    visibility = ["//visibility:public"],
    deps = ["@com_github_shopspring_decimal//:decimal"],
)
