load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = [
        "cli.go",
        "test.go",
    ],
    importpath = "github.com/clstb/phi/go/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/postgres",
        "@com_github_golang_migrate_migrate_v4//source/iofs",
        "@com_github_jackc_pgx_v4//pgxpool",
        "@com_github_jackc_pgx_v4//stdlib",
        "@com_github_urfave_cli_v2//:cli",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)
