load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ledger",
    srcs = [
        "amount.go",
        "ledger.go",
        "metadata.go",
        "open.go",
        "posting.go",
        "regexp.go",
        "transaction.go",
    ],
    importpath = "github.com/clstb/phi/go/internal/phi/ledger",
    visibility = ["//visibility:public"],
    deps = ["@com_github_shopspring_decimal//:decimal"],
)

go_library(
    name = "beancount",
    srcs = [
        "amount.go",
        "ledger.go",
        "metadata.go",
        "open.go",
        "posting.go",
        "regexp.go",
        "transaction.go",
    ],
    importpath = "github.com/clstb/phi/go/internal/phi/beancount",
    visibility = ["//go:__subpackages__"],
    deps = ["@com_github_shopspring_decimal//:decimal"],
)
