load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "commands",
    srcs = [
        "ledger.go",
        "link.go",
        "sync.go",
    ],
    importpath = "github.com/clstb/phi/go/internal/phi/commands",
    visibility = ["//go:__subpackages__"],
    deps = [
        "//go/internal/phi/beancount",
        "//go/pkg/client",
        "//go/pkg/client/tink",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_shopspring_decimal//:decimal",
    ],
)
