load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "key",
    srcs = ["key.go"],
    importpath = "github.com/clstb/phi/go/internal/phi/key",
    visibility = ["//go:__subpackages__"],
    deps = [
        "@com_github_charmbracelet_bubbles//key",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
    ],
)
