load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "auth.go",
        "classify.go",
        "home.go",
        "sync.go",
    ],
    importpath = "github.com/clstb/phi/go/internal/phi/models",
    visibility = ["//go:__subpackages__"],
    deps = [
        "//go/internal/phi/beancount",
        "//go/internal/phi/commands",
        "//go/internal/phi/key",
        "//go/internal/phi/state",
        "//go/pkg/client",
        "@com_github_charmbracelet_bubbles//help",
        "@com_github_charmbracelet_bubbles//key",
        "@com_github_charmbracelet_bubbles//textinput",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_lithammer_fuzzysearch//fuzzy",
    ],
)
