load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "login.go",
        "register.go",
        "server.go",
    ],
    importpath = "github.com/clstb/phi/go/pkg/auth/server",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/auth/db",
        "//go/pkg/auth/pb",
        "@com_github_dgrijalva_jwt_go//:jwt-go",
        "@com_github_jackc_pgx_v4//:pgx",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_crypto//bcrypt",
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    deps = [
        "//go/pkg/auth/db",
        "//go/pkg/util",
    ],
)
