load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "gen.go",
        "models.go",
        "querier.go",
        "users.sql.go",
    ],
    embedsrcs = [
        "schema/000001_create_users_table.down.sql",
        "schema/000001_create_users_table.up.sql",
    ],
    importpath = "github.com/clstb/phi/go/pkg/tinkgw/db",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gofrs_uuid//:uuid"],
)
