load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "callback.go",
        "create_user.go",
        "get_link.go",
        "get_token.go",
        "routes.go",
        "server.go",
    ],
    importpath = "github.com/clstb/phi/go/pkg/tinkgw/server",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/interceptor",
        "//go/pkg/tink",
        "//go/pkg/tinkgw/db",
        "//go/pkg/tinkgw/pb",
        "@com_github_go_chi_chi//:chi",
        "@com_github_go_chi_chi//middleware",
        "@com_github_gofrs_uuid//:uuid",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//clientcredentials",
        "@org_uber_go_zap//:zap",
    ],
)
