load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "gen.go",
        "ledgers.sql.go",
        "models.go",
        "querier.go",
    ],
    embedsrcs = [
        "schema/000001_create_ledgers_table.down.sql",
        "schema/000001_create_ledgers_table.up.sql",
    ],
    importpath = "github.com/clstb/phi/go/pkg/services/bookkeeper/db",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gofrs_uuid//:uuid"],
)
