load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tink",
    srcs = [
        "accounts.go",
        "authorize_grant.go",
        "authorize_grant_delegate.go",
        "client.go",
        "create_user.go",
        "oauth_token.go",
        "provider_consents.go",
        "providers.go",
        "rt.go",
        "transactions.go",
    ],
    importpath = "github.com/clstb/phi/go/pkg/services/tinkgw/tink",
    visibility = ["//visibility:public"],
)
